--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/formly/info.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/formly/info.formly.html
@@ -1,3 +1,1 @@
-<div class="alert alert-info alert-bottom">
-    <span dynamic-label key="{{to.label}}"></span>
-</div>
+<wc-alert-message class="alert-bottom" alert-severity="info" alert-message-id="{{to.label}}"></wc-alert-message>
