--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/arendeListUtkast.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/arendeListUtkast.html
@@ -12,10 +12,10 @@
         </h2>
         <span wc-help-chevron-text help-text-key="common.arende.help.kompletteringar"></span>
         <!-- error message -->
-        <div id="arende-list-load-error" ng-show="viewState.doneLoading && viewState.activeErrorMessageKey"
-             class="alert alert-danger">
+        <wc-alert-message id="arende-list-load-error" ng-show="viewState.doneLoading && viewState.activeErrorMessageKey"
+             alert-severity="danger">
           <span message key="common.error.{{viewState.activeErrorMessageKey}}"></span>
-        </div>
+        </wc-alert-message>
 
       </div>
 
