--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/fmb/wcFmbContent.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/fmb/wcFmbContent.directive.html
@@ -11,12 +11,12 @@
     </div>
   </div>
   <div class="panel-body">
-    <div class="alert alert-warning" ng-if="fmb.diagnosKod !== fmb.originalDiagnosKod">
+    <wc-alert-message alert-message-id="warning" ng-if="fmb.diagnosKod !== fmb.originalDiagnosKod">
       <span id="fmb_diagnos_not_in_fmb_alert">Det FMB-stöd som visas är för koden {{fmb.diagnosKod}} - {{fmb.diagnosBeskrivning}}.</span>
-    </div>
-    <div class="alert alert-warning" ng-if="!fmb.formData[fieldName]">
+    </wc-alert-message>
+    <wc-alert-message alert-message-id="warning" ng-if="!fmb.formData[fieldName]">
       <span id="fmb_info_not_available"><span class="bold">Observera!</span> För "{{fmb.diagnosKod}} {{fmb.diagnosBeskrivning}}" finns ingen FMB-information för detta fält.</span>
-    </div>
+    </wc-alert-message>
     <div ng-repeat="item in fmb.formData[fieldName]" ng-show="item.text || item.list">
       <h4 class="fmb-sub-headline" id="fmb_heading_{{item.heading}}">
         <span message key="{{'fmb.' + item.heading}}"></span>
