--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/formly/labelVardenhet.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/formly/labelVardenhet.formly.html
@@ -2,7 +2,7 @@
     ({{model.grundData.skapadAv.vardenhet.enhetsid}}),
     {{model.grundData.skapadAv.vardenhet.vardgivare.vardgivarnamn}}</label>
 
-<div class="alert alert-info" ng-show="commonViewState.hsaInfoMissing">
+<wc-alert-message alert-severity="info" ng-show="commonViewState.hsaInfoMissing">
     Information om vårdenheten saknas i HSA-katalogen. Be den på vårdenheten som är ansvarig för
     frågor om HSA att uppdatera informationen.
-</div>
+</wc-alert-message>
