--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastErrorSummary/wcUtkastErrorSummary.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcUtkastErrorSummary/wcUtkastErrorSummary.directive.html
@@ -1,13 +1,13 @@
 <div id="visa-vad-som-saknas-lista" ng-show="viewState.common.validation.sections.length > 0">
-  <h3 class=""><span message key="draft.saknar-uppgifter"></span></h3>
-  <div class="alert alert-danger">
-    <ul class="ul__thin-bullet">
-      <li ng-repeat="message in viewState.common.validation.sections">
-        <a href="" ng-click="scrollTo(message)"><span message
-                                                      key="{{viewState.common.intyg.type}}.label.{{message}}"></span></a>
-      </li>
-    </ul>
-  </div>
+  <wc-alert-message alert-severity="danger">
+    <h3 class=""><span message key="draft.saknar-uppgifter"></span></h3>
+  </wc-alert-message>
+  <ul class="ul__thin-bullet">
+    <li ng-repeat="message in viewState.common.validation.sections">
+      <a href="" ng-click="scrollTo(message)"><span message
+                                                    key="{{viewState.common.intyg.type}}.label.{{message}}"></span></a>
+    </li>
+  </ul>
 
   <div wc-authority="!SIGNERA_INTYG" class="intyg-block">
     <button type="button" id="checkMissing" class="btn btn-default"
