INTYG-5146: Rättade felanvändning av wc-alert-message

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcPatientAddressMissingFromIntegrationMessage.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcPatientAddressMissingFromIntegrationMessage.directive.html
@@ -1,5 +1,4 @@
 <div id="wc-patient-address-missing-from-integration-message" class="padding-top-medium" ng-show="show">
-  <wc-alert-message alert-severity="warning" alert-id="saknarAdressPanel" alert-message-id="saknarAdress">
-    <span ng-bind-html="message"></span>
+  <wc-alert-message alert-severity="warning" alert-id="saknarAdress" alert-message-id="intyg.status.patient.address.integration.missing">
   </wc-alert-message>
 </div>
