INTYG-5310: initial version med högerfält för lisjp utkast (om man går via /edit-60/, alla andra sidor behöver uppdateras till att använda container-fluid som root.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast-60.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast-60.html
@@ -44,10 +44,9 @@
     </form>
   </div>
 
-  <div class="webcert-col webcert-col-secondary webcert-multicol-background-grey" wc-authority feature="HANTERA_FRAGOR" intygstyp="{{widgetState.certificateType}}" ui-view="fragasvar"></div>
+  <div class="webcert-workarea-supportpanel" ng-if="supportPanelConfig">
+    <wc-support-panel-manager config="supportPanelConfig"></wc-support-panel-manager>
+  </div>
 
 </div>
-
-
-
 
