INTYG-5310: rensat bland states och använder nya flex-klasser för app-layout

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/arendeListUtkast.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/arendeListUtkast.html
@@ -19,7 +19,7 @@
 
       </div>
 
-      <div id="unhandledArendeCol" class="webcert-col-section arende-list-section" ng-show="arendeList.length > 0">
+      <div id="unhandledArendeCol" class="arende-list-section" ng-show="arendeList.length > 0">
 
         <div ng-show="(arendeList | filter:kompletteringarFilter | filter:openArendenFilter).length == 0" id="allKompletteringarHandled">
           Alla kompletteringar är hanterade.
