--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/arendeList.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/arendeList.html
@@ -17,7 +17,7 @@
 
       </div>
 
-      <div id="unhandledArendeCol" class="webcert-col-section arende-list-section" ng-show="arendeList.length > 0">
+      <div id="unhandledArendeCol" class="arende-list-section" ng-show="arendeList.length > 0">
 
         <!-- list of open arenden -->
         <div ng-repeat="arendeListItem in arendeList | filter:openArendenFilter | orderBy:'senasteHandelse':true"
