--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
@@ -1,106 +1,94 @@
-<div class="header-fix-top" wc-size-source="viewState.common.headerSize">
-  <div class="header-wrapper menucollapse" ng-hide="viewState.common.collapsedHeader">
-    <div ui-view="wcHeader"></div>
-  </div>
+<div class="utkast-header">
 
   <div ng-hide="viewState.common.error.activeErrorMessageKey">
     <div wc-spinner label="info.loadingintyg" show-spinner="!viewState.common.doneLoading"
          show-content="viewState.common.doneLoading">
 
-      <div class="header-fix-panel">
-        <div class="header-fix-top-expand">
-          <div class="header-fix-top-expand-wrapper">
-            <button type="button" class="btn btn-link" ng-click="toggleHeader()">
-              {{viewState.common.showHideButtonText}}
-            </button>
-          </div>
-        </div>
 
-        <div class="container-fluid">
+      <div class="container-fluid">
 
-          <div class="row">
-            <div class="pull-left">
+        <div class="row">
+          <div class="pull-left">
 
-              <h1 class="page-title header-fix-panel__title"><a id="tillbakaButton" wc-authority="NAVIGERING" href
-                                                                wc-back title="Tillbaka till Skriv intyg"
-                                                                class="backlink-icon glyphicon glyphicon-arrow-left"></a>
-                <span>{{intygsnamn}}</span><span wc-help-chevron help-text-key="FRM_2.RBK"></span>
-              </h1>
+            <h1 class="page-title header-fix-panel__title"><a id="tillbakaButton" wc-authority="NAVIGERING" href
+                                                              wc-back title="Tillbaka till Skriv intyg"
+                                                              class="backlink-icon glyphicon glyphicon-arrow-left"></a>
+              <span>{{intygsnamn}}</span><span wc-help-chevron help-text-key="FRM_2.RBK"></span>
+            </h1>
 
-              <div class="header-help-container">
-                <span wc-help-chevron-text help-text-key="FRM_2.RBK"></span>
-              </div>
+            <div class="header-help-container">
+              <span wc-help-chevron-text help-text-key="FRM_2.RBK"></span>
+            </div>
 
-              <div class="form-group buttonbar">
-                <button type="button" id="skriv-ut-utkast" class="btn btn-secondary" ng-if="!viewState.common.isSigned"
-                        ng-click="print()" title="Skriver ut utkastet.">
-                  <i class="glyphicon glyphicon-print"></i>
-                </button>
-                <button type="button" id="ta-bort-utkast" class="btn btn-secondary" ng-if="!viewState.common.isSigned"
-                        ng-click="discard()" title="Klicka på papperskorgen för att radera utkastet.">
-                  <i class="glyphicon glyphicon-trash"></i>
-                </button>
+            <div class="form-group buttonbar">
+              <button type="button" id="skriv-ut-utkast" class="btn btn-secondary" ng-if="!viewState.common.isSigned"
+                      ng-click="print()" title="Skriver ut utkastet.">
+                <i class="glyphicon glyphicon-print"></i>
+              </button>
+              <button type="button" id="ta-bort-utkast" class="btn btn-secondary" ng-if="!viewState.common.isSigned"
+                      ng-click="discard()" title="Klicka på papperskorgen för att radera utkastet.">
+                <i class="glyphicon glyphicon-trash"></i>
+              </button>
 
-                <!-- current draft status -->
-                <span class="utkast-header-status">
+              <!-- current draft status -->
+              <span class="utkast-header-status">
                   <!-- Just in case (should never be here for a signed utkast)-->
                   <span id="certificate-is-sent-to-it-message-text" ng-if="viewState.common.isSigned">
                     <span message key="draft.status.signed"></span>
                   </span>
-                  <!-- complete -->
+                <!-- complete -->
                   <span
                       ng-if="!viewState.common.saving && certForm.$pristine && viewState.common.intyg.isComplete && !viewState.common.isSigned">
                     <span id="intyget-sparat-och-komplett-meddelande" message key="draft.status.complete"></span>
                   </span>
-                  <!-- incomplete -->
+                <!-- incomplete -->
                   <span ng-if="!viewState.common.saving && certForm.$pristine && !viewState.common.intyg.isComplete">
                     <span id="intyget-sparat-och-ej-komplett-meddelande" message key="draft.status.incomplete"></span>
                   </span>
-                  <!-- form changed -->
+                <!-- form changed -->
                   <span ng-if="viewState.common.saving || certForm.$dirty"><span message
                                                                                  key="draft.status.changed"></span>
                   </span>
                 </span>
 
-              </div>
             </div>
+          </div>
 
-            <div class="pull-left utkast-header-right-group">
-              <div>
-                <div wc-intyg-patient-namn-personnummer
-                     patient-name="viewState.intygModel.grundData.patient.fullstandigtNamn"
-                     person-id="viewState.intygModel.grundData.patient.personId"
-                     old-person-id="oldPersonId"
-                     class="utkast-header-person-id"></div>
+          <div class="pull-left utkast-header-right-group">
+            <div>
+              <div wc-intyg-patient-namn-personnummer
+                   patient-name="viewState.intygModel.grundData.patient.fullstandigtNamn"
+                   person-id="viewState.intygModel.grundData.patient.personId"
+                   old-person-id="oldPersonId"
+                   class="utkast-header-person-id"></div>
 
-                <br>
-                <span wc-sekretess-avliden uuid="viewState.intygModel.grundData.patient.personId" printlabel="true"
-                      avliden="viewState.intygModel.grundData.patient.avliden"
-                      sekretessmarkering="viewState.intygModel.grundData.patient.sekretessmarkering"></span>
+              <br>
+              <span wc-sekretess-avliden uuid="viewState.intygModel.grundData.patient.personId" printlabel="true"
+                    avliden="viewState.intygModel.grundData.patient.avliden"
+                    sekretessmarkering="viewState.intygModel.grundData.patient.sekretessmarkering"></span>
 
-              </div>
             </div>
-            <div class="clearfix"></div>
+          </div>
+          <div class="clearfix"></div>
 
-            <div wc-patient-address-missing-from-integration-message intyg="viewState.intygModel" context="UTKAST"></div>
+          <div wc-new-person-id-message is-intyg="false"></div>
 
-            <div wc-new-person-id-message is-intyg="false"></div>
+          <div wc-patient-info-change-message intyg="viewState.intygModel" context="UTKAST"></div>
 
-            <div wc-patient-info-change-message intyg="viewState.intygModel" context="UTKAST"></div>
+          <!-- Error/info messages -->
 
-
-            <!-- Error/info messages -->
-
-            <div ng-show="viewState.common.error.saveErrorCode != null" class="padding-top-medium">
-              <wc-alert-message class="danger no-margin">
-                <span ng-bind-html="viewState.common.error.saveErrorMessage"></span>
-              </wc-alert-message>
-            </div>
-
+          <div ng-show="viewState.common.error.saveErrorCode != null" class="padding-top-medium">
+            <wc-alert-message class="danger no-margin">
+              <span ng-bind-html="viewState.common.error.saveErrorMessage"></span>
+            </wc-alert-message>
           </div>
 
         </div>
+
       </div>
+
+
+
     </div>
   </div>
 
