INTYG-5370: anchorScrollService hanterar nu även scroll i container (intygen ligger i en div med overflow).

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast-60.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast-60.html
@@ -13,7 +13,7 @@
 
 <div class="webcert-workarea-hflex-container" id="edit-{{viewState.common.intyg.type}}">
 
-  <div class="webcert-workarea-intyg edit-form container-fluid" id="scrolltest">
+  <div id="certificate-content-container" class="webcert-workarea-intyg edit-form container-fluid">
 
     <form name="certForm" novalidate autocomplete="off" wc-auto-save>
       <div ng-hide="viewState.common.error.activeErrorMessageKey || viewState.common.deleted">
