--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/ueRenderComponents.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/ueRenderComponents.directive.html
@@ -1,3 +1,3 @@
-<div ng-if="config" ng-repeat="itemConfig in config">
-  <ue-dynamic-component config="itemConfig" model="model" />
+<div ng-if="::config" ng-repeat="itemConfig in ::config">
+  <ue-dynamic-component config="::itemConfig" model="::model" />
 </div>
