INTYG-4113: Lyfter in befintliga ärendehanteringen i wc-arende-panel-tab.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast-60.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast-60.html
@@ -47,7 +47,7 @@
     </form>
   </div>
 
-  <div class="webcert-workarea-supportpanel" ng-if="supportPanelConfig">
+  <div class="webcert-workarea-supportpanel" ng-if="::supportPanelConfig">
     <wc-support-panel-manager config="supportPanelConfig"></wc-support-panel-manager>
   </div>
 
