--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/formly/checkboxInline.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/formly/checkboxInline.formly.html
@@ -1,6 +1,6 @@
 <div>
   <label class="big-checkbox-label checkbox-inline" ng-class="{'bold': to.bold}">
-    <input type="checkbox" class="big-checkbox" ng-model="model[options.key]">
+    <input id="{{options.key}}" type="checkbox" class="big-checkbox" ng-model="model[options.key]">
     <span dynamic-label key="{{to.label}}.RBK"></span>
   </label>
 </div>
