--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/smiIntygUv.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/smiIntygUv.html
@@ -20,14 +20,9 @@
     </div><!--  spinner end -->
   </div>
 
-    <!-- fråga svar -->
-    <div class="webcert-workarea-supportpanel remove-when-migrated-to-supportpanel-scrollable-flex-content" wc-authority
-         feature="HANTERA_FRAGOR" intygstyp="{{widgetState.certificateType}}">
-      <h2 class="col-head">Frågor och svar</h2>
-      <div ui-view="fragasvar" />
-    </div>
 
-
-
+  <div class="webcert-workarea-supportpanel" ng-if="::supportPanelConfig">
+    <wc-support-panel-manager config="supportPanelConfig"></wc-support-panel-manager>
+  </div>
 
 </div>
