--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
@@ -47,8 +47,9 @@
     </form>
   </div>
 
-  <div class="webcert-workarea-supportpanel remove-when-migrated-to-supportpanel-scrollable-flex-content"
-       wc-authority feature="HANTERA_FRAGOR" intygstyp="{{widgetState.certificateType}}" ui-view="fragasvar"></div>
+  <div class="webcert-workarea-supportpanel" ng-if="::supportPanelConfig">
+    <wc-support-panel-manager config="supportPanelConfig"></wc-support-panel-manager>
+  </div>
 
 </div>
 
