INTYG-5406: auto-expand körs nu med debounce, ändrat wc-spinner till ng-show så den inte hindrar auto-expand vid första laddningen av utkastdata.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/arendeListUtkast.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/arendeListUtkast.html
@@ -1,8 +1,7 @@
 <div class="row weak-hidden" ng-class="{show: viewState.showTemplate}">
   <div class="col-md-12 arende-column">
 
-    <div wc-spinner label="common.loading.existing.arenden" show-spinner="!viewState.doneLoading"
-         show-content="viewState.doneLoading">
+    <wc-spinner label="common.loading.existing.arenden" show-spinner="!viewState.doneLoading">
 
       <div class="webcert-bottom-padding-section" ng-show="viewState.intygProperties.isLoaded">
 
@@ -33,7 +32,7 @@
 
       </div>
 
-    </div>
+    </wc-spinner>
 
   </div>
   <!--  end spinner -->
