--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
@@ -1,8 +1,7 @@
 <div class="utkast-header">
 
   <div ng-hide="viewState.common.error.activeErrorMessageKey">
-    <div wc-spinner label="info.loadingintyg" show-spinner="!viewState.common.doneLoading"
-         show-content="viewState.common.doneLoading">
+    <wc-spinner label="info.loadingintyg" show-spinner="!viewState.common.doneLoading">
 
 
       <div class="container-fluid">
@@ -89,7 +88,7 @@
 
 
 
-    </div>
+    </wc-spinner>
   </div>
 
   <!-- Total fail error messages -->
