--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
@@ -18,8 +18,7 @@
     <form name="certForm" novalidate autocomplete="off" wc-auto-save>
       <div ng-hide="viewState.common.error.activeErrorMessageKey || viewState.common.deleted">
 
-        <div wc-spinner label="info.loadingintyg" show-spinner="!viewState.common.doneLoading"
-             show-content="viewState.common.doneLoading">
+        <wc-spinner label="info.loadingintyg" show-spinner="!viewState.common.doneLoading">
 
           <div id="certificate" class="row certificate">
             <div class="col-md-12 intyg-body">
@@ -41,7 +40,7 @@
                                       view-state="viewState"></wc-utkast-error-summary-fk>
           <div ui-view="footer"></div>
 
-        </div>
+        </wc-spinner>
       </div>
 
     </form>
