INTYG-5366: första observationen hamnar nu på ny rad efter "Tänk på att" i SRS

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -29,8 +29,9 @@
                 <wc-srs-error-box message-string="srsViewState.atgarderError"></wc-srs-error-box>
             </div>
             <div id="atgarderObs" ng-if="status.open">
+                    <span><b>Tänk på att </b></span>
                 <div ng-repeat="(key,value) in srsViewState.atgarder.atgarderObs|limitTo:3">
-                    <span ng-if="$first"><b>Tänk på att </b></span>{{value}}
+                    {{value}}
                     <br>
                 </div>
             </div>
