--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcPatientStatus/wcPatientStatus.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcPatientStatus/wcPatientStatus.directive.html
@@ -1,5 +1,5 @@
 <div>
-  <span wc-sekretess-avliden uuid="patient.personId" printlabel="true" avliden="isPatientDeceased" sekretessmarkering="patient.sekretessmarkering"></span>
+  <div wc-sekretess-avliden uuid="patient.personId" printlabel="true" avliden="commonIntygViewState.isPatientDeceased()" sekretessmarkering="patient.sekretessmarkering"></div>
   <div wc-secrecy-mark-message person-id="patient.personId" type="intyg"></div>
   <div wc-new-person-id-message patient="patient" is-intyg="true"></div>
   <div wc-patient-info-change-message intyg="intygModel" intyg-properties="intygProperties" context="INTYG"></div>
