--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygHeader/wcIntygHeader.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygHeader/wcIntygHeader.directive.html
@@ -31,7 +31,7 @@
     <div class="page-header-divider">
       <a id="tillbakaButton" wc-authority="NAVIGERING" class="backlink-icon glyphicon glyphicon-arrow-left"
          ui-sref="webcert.create-choose-certtype-index({patientId:'default'})" title="Tillbaka till Sök/skriv intyg">Tillbaka</a>
-      <wc-intyg-status view-state="intygViewState"></wc-intyg-status>
+      <wc-intyg-status intyg-view-state="intygViewState"></wc-intyg-status>
     </div>
     <div class="flex-row">
       <div class="flex-col-max">
